--- a/.github/workflows/deploy_hugo.yml
+++ b/.github/workflows/deploy_hugo.yml
@@ -22,11 +22,11 @@ jobs:
 
     # Step 3: Build the site
     - name: Build the Hugo site
-      run: hugo --minify --destination docs
+      run: hugo --minify 
 
     # Step 4: Deploy to GitHub Pages
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        publish_dir: ./docs # This is the folder Hugo generates the site in
+        publish_dir: ./public # This is the folder Hugo generates the site in
         github_token: ${{ secrets.GITHUB_TOKEN }} # Token to authenticate with GitHub
